--- a/angular-16-client/src/app/components/users-list/tutorials-list.component.html
+++ b/angular-16-client/src/app/components/users-list/tutorials-list.component.html
@@ -19,11 +19,11 @@
     </div>
   </div>
   <div class="col-md-6">
-    <h4>Tutorials List</h4>
+    <h4>Users List</h4>
     <ul class="list-group">
       <li
         class="list-group-item"
-        *ngFor="let tutorial of tutorials; let i = index"
+        *ngFor="let tutorial of users; let i = index"
         [class.active]="i == currentIndex"
         (click)="setActiveTutorial(tutorial, i)"
       >
